Update Ezra 1&2, Nehemiah 1

--- a/_studies/Ezra-1.html
+++ b/_studies/Ezra-1.html
@@ -7,7 +7,7 @@
 <p><span class="underline">God gave the Jews autonomy during Persia’s decline in power</span>. During Darius I’s reign, Greeks in modern day Turkey rebelled against him, called the Ionian Revolt. Darius I then took control over all of Turkey. He then formed a massive army to defeat the Greek mainland. Yet, in 490 B.C., the Greeks of Athens and Sparta united to defeat a far larger Persian army at the Battle of Marathon. An Egyptian revolt thwarted Darius I’s attempts at a second invasion. In 475 B.C., Xerxes I (486-465 B.C.) succeeded him as the next emperor of Persia. He then attempted to lead a new invasion of Greece. But the Greeks defeated his navy at the battle of Salamis. The events of the book of Esther begin during the third year of Xerxes I’s reign. Esther became queen during the seventh year of his reign (Esth. 2:17). Some believe that the plot that Mordecai uncovered to assassinate Xerxes I stemmed from his humiliating defeat to the Greeks. Yet, his 20-year reign ended in 465 B.C. after Hazarapat murdered him. (Breneman, <em>The New American Commentary,</em> p. 23). Artaxerxes I (464-424 B.C.) then became the next Persian king. At this time, Persia became weakened by revolts. In 460 B.C., the Egyptians revolted. In 459, the Athenians captured Alexandria. Many believe that Persia’s weakened state caused Artaxerxes I to offer autonomy in an attempt to instill loyalty in his empire. This benefited the Jews as they sought to rebuild. In 458 B.C., the seventh year of King Artaxerxes I’ reign, Ezra arrived in Jerusalem (Ezra 7:7-8). In 445 B.C., the twentieth year of King Artaxerxes’ reign, Nehemiah arrived. (Neh. 2:1). Between 445 B.C. and 425 B.C., Nehemiah led the Jews in rebuilding the walls of Jerusalem. Ezra and Nehemiah led the Jews in preparing their hearts for the Messiah.</p>
 <p><span class="underline">The wait for the Messiah</span>. Although Ezra and Nehemiah led the Jews in spiritual reforms, the Jews continued to live under foreign occupation. In 332 B.C., Alexander the Great (356 B.C. – 323 B.C.) took Jerusalem from the Persians. Between 332 B.C. and 141 B.C., the Jews lived under the rule of the Greek generals Ptolemaic and then Seleucid. While some Jews might have thought that God had abandoned them, God used this Hellenistic period of Jewish history to prepare the world for the Messiah. During this time, Greek converts to Judaism translated the Torah into Greek, which expanded it to the Gentiles. In Genesis 9:27, God promised to “enlarge” Japheth (the father of the European nations). Some Jews scholars saw this as applying to the Greek proselytes, whom they believed would become followers of the future Messiah: “According to the Targum, this means that the descendants of Japheth will become proselytes in the days of the Messiah, ‘His sons shall be proselytes and dwell in the schools of Shem, and Canaan will be a slave to them.’” (<em>Targum Pseudo-Yonatan</em>). Some Jews from this time period believed that, during the Messianic era, the believers amongst the descendants of Shem and Japheth would be gathered together under the Messiah’s perfect government (Is. 66:19-20). Isaiah’s prophesy allowed Paul’s contemporary, named Shimon ben Gamli’el, to authorize the Greek Septuagint translation of the Torah. (<em>Megillah</em> 9b.) This then spread God’s Word to the Gentiles. The early Church writers and the reformers like Martin Luther and John Calvin also saw the coming together of the descendants of Shem and Japheth as referencing the Messianic era of Christ. Both Jews and Gentiles are offered to share in the blessings offered to Abraham when you believe in Jesus: “in order that in Christ Jesus the blessing of Abraham might come to the Gentiles, so that we would receive the promise of the Spirit through faith.” (Gal. 3:14).</p>
 <p><span class="underline">The inability of the Jews to recognize Jesus, the true Messiah</span>. In 63 B.C., the Roman General Pompey captured Jerusalem, which set the stage for the arrival of the Messiah, Jesus Christ. But the Jews rejected Jesus because they were looking for a military leader to drive out the foreign oppressors. Moreover, the reforms of Ezra and Nehemiah failed to fully prepare the Jews for the Messiah. Ezra and Nehemiah reinstituted obedience to the Mosaic law. Yet, their necessary purge of pagan beliefs brought about a type of legalism that was prevalent when Jesus arrived. The Jews made obedience to the law the end goal. Jesus taught that obedience was important. But He taught that it was the fruit of a believer who loved God (Jo. 14:15; 14:21; 15:10).</p>
-<p><span class="underline">Themes of Ezra – Nehemiah</span>. Ezra and Nehemiah attempted to lead the Jews in a revival of their faith. They failed. There are several primary lessons from their failed attempt at revival.</p>
+<p><span class="underline">Themes of Ezra – Nehemiah</span>. Ezra and Nehemiah each lead the Jews in brief revivals. Yet, for several reasons, they failed to establish long-lasting revivals of the Jewish faith.</p>
 <p>1) <span class="underline">Faith</span>. Some Jews believed that God had abandoned them in exile. Others had established themselves living in foreign lands and saw no reason to start over in the Promised Land. Thus, Ezra and Nehemiah stressed God’s sovereignty over pagan rulers and the continuity of His plan for the Jews (Ezra 1:1; 5:5; 6:22; 7:27; 8:22; Neh. 2:8; 4:20). The Jews needed to understand that God’s hand had moved the Persian kings to free them to return and to rebuild His Temple. In short, they exhorted the Jews to have faith. Sadly, only a small remnant would have the faith to respond to God’s calling to leave their old lives behind for a second exodus. The revivals also failed because the Jews faith depended upon worldly success.</p>
 <p>2) <span class="underline">Spirit-led obedience</span>. Moses warned the Jews that some of God’s blessings are conditional. While Spirit-led obedience would lead to blessings (Dt. 28:1-14), disobedience led to God’s progressive discipline. This culminated in exile (Dt. 28:15-68). Ezra and Nehemiah exhorted the Jews not to repeat the mistakes of their forefathers. The Jews had to be obedient to God’s Word as it is written (Ezra 3:2-4; 6:18; 7:6; 9:7; Neh. 8:14-15). Some Jews, however, failed to make obedience the fruit of a person’s love for God. Some Jews created a new yoke of legalism. Even worse, because their acts of obedience were not the result of a transformed heart, many Jews failed in their attempt to be obedient. They needed a new covenant based upon God’s promises through Ezekiel and Jeremiah of a transformed heart (Ezek. 36:26; Jer. 24:7).</p>
 <p>3) <span class="underline">Separation</span>. Many Jews who returned had mixed their belief system with the beliefs of the pagan nations wherever they lived. This was another mistake that Ezra and Nehemiah sought to correct (Ezra 9:14). The Jews needed to remove their worldly influences from their walk. Their failure to stay separate from worldly ways would also undermine their attempts at revival.</p>
@@ -73,29 +73,31 @@
 <li><p><span class="underline">Serve in humility</span>. Sheshbazzar’s name is barely mentioned again after this chapter (Ezra 5:16). That has caused some to believe that he must also be the leader “Zerubbabel”, referenced in later chapters as the leader of the returning exiles (Ezra 2:2). Yet, God frequently uses the humble to serve Him. Most frequently, His leaders serve with little or no publicity on Earth. God will, however, reward everyone in heaven who steps out in humility to serve Him. “For God is not unjust so as to forget your work and the love which you have shown toward His name, in having ministered and in still ministering to the saints.” (Heb. 6:10). Are you volunteering to serve God’s flock in humility?</p></li>
 <li><p><span class="underline">Many laborers are needed to tend God’s flock</span>. It would be a mistake to assume that someone else can step forward to lead. Being a spectator is not amongst God’s callings or gifts. Many leaders are needed: “And He was saying to them, ‘The harvest is plentiful, but the laborers are few; therefore beseech the Lord of the harvest to send out laborers into His harvest.”’ (Lk. 10:2). Will you be a Sheshbazzar to those in need?</p></li>
 </ul>
-<p>God’s Faithfulness in Delivering the Jews from Babylonian Captivity – the 2<sup>nd</sup> exodus</p>
+<p>God’s Faithfulness in Delivering the Jews from Babylonian Captivity</p>
 <p>605 BC</p>
-<h1 id="nebuchadnezzar-ii-babylonian"><strong><em>Nebuchadnezzar II</em> (Babylonian)</strong></h1>
+<h1 id="nebuchadnezzar-ii-babylonian"><em>Nebuchadnezzar II</em> (Babylonian)</h1>
 <p>562 BC</p>
 <p><em>Evil Merodach</em> (Babylonian)</p>
 <p>560 BC</p>
-<h1 id="nabonidus-babylonian"><strong><em>Nabonidus</em> (Babylonian)</strong></h1>
+<h1 id="nabonidus-babylonian-was-aramean"><em>Nabonidus</em> (Babylonian) (was Aramean)</h1>
+<p>Resided in northern Arabia</p>
 <p>559 BC</p>
-<h1 id="section"></h1>
-<h1 id="cyrus-ii-persian"><strong><em>Cyrus I</em>I (Persian)</strong></h1>
-<p>529 Belshazzar a minor king</p>
+<h1 id="belshazzar-viceroy-in-babylon">539 Belshazzar, viceroy in Babylon</h1>
+<p>539 Cyrus II conquers Babylon</p>
+<h1 id="cyrus-ii-persian"><em>Cyrus II</em> (Persian)</h1>
+<p>530</p>
 <p><em>Cambyses II</em> (Persian)</p>
 <p>Of Ezra 4.7,11,23</p>
 <p>522 BC</p>
-<h1 id="darius-i-the-great-mede"><strong><em>Darius I</em> the Great (Mede)</strong></h1>
-<p>(one of Artaxerxes’ generals)</p>
-<h2 id="bc"><strong>486 BC</strong></h2>
+<h1 id="darius-i-the-great-mede"><em>Darius I</em> the Great (Mede)</h1>
+<p>(one of Artaxerxes’ generals 488</p>
+<h2 id="bc">486 BC</h2>
+<h2 id="section"></h2>
+<h2 id="xerxes-i-persianaka-xerxes-the-great"><em>Xerxes I</em> (Persian)aka “Xerxes the Great”</h2>
 <h2 id="section-1"></h2>
-<h2 id="xerxes-i-persianaka-xerxes-the-great"><strong><em>Xerxes I</em> (Persian)aka “Xerxes the Great”</strong></h2>
 <h2 id="section-2"></h2>
+<h2 id="bc-1">464 BC</h2>
 <h2 id="section-3"></h2>
-<h2 id="bc-1"><strong>464 BC</strong></h2>
-<h2 id="section-4"></h2>
-<h2 id="artaxerxes-i-capital-is-susa"><strong><em>Artaxerxes I</em> Capital is Susa</strong></h2>
+<h2 id="artaxerxes-i-capital-is-susa"><em>Artaxerxes I</em> Capital is Susa</h2>
 <p>3<sup>rd</sup> son of Xerxes (Persian)</p>
 <p>425 BC</p>
