--- a/_studies/Nehemiah-1.html
+++ b/_studies/Nehemiah-1.html
@@ -55,29 +55,31 @@
 <li><p><span class="underline">To find your life, you must be willing to lose it</span>. If the king did not kill him, Nehemiah was ready to give up his life of privilege to serve the Jews. Moses also gave up his life of privilege in Pharaoh’s house to serve the Jews. Paul gave up his privilege and influence to serve Jesus. Jesus also put aside His grandeur to die a humble servant to save mankind: “who, although He existed in the form of God, did not regard equality with God a thing to be grasped, but emptied Himself, taking the form of a bond-servant, and being made in the likeness of men.” (Phil. 2:6-7). You must also be willing to lose your worldly life to find Jesus: “Whoever finds their life will lose it, and whoever loses their life for my sake will find it.” (Matt. 10:39; 16:25). “‘If anyone wishes to come after Me, he must deny himself, and take up his cross daily and follow Me.’” (Lk. 9:23; Mk. 8:34). Paul later realized that his prior accomplishments were nothing compared to the value of his relationship with Christ: “But whatever things were gain to me, those things I have counted as loss for the sake of Christ.” (Phil. 3:7; same, Heb. 13:13). Do you value most the things of God or your wealth and worldly accomplishments?</p></li>
 <li><p><span class="underline">God cares for His people and is looking for Nehemiah’s to serve</span>. When He called Moses, God said that He heard the cries of His people (Ex. 2:23-25). God cannot ignore our suffering: “Can a woman forget her nursing child and have no compassion on the son of her womb? Even these may forget, but I will not forget you.” (Is. 49:15). But God is looking for people like Nehemiah, Ezra, Moses, and Paul, who are willing to respond without delay to His calls and give up their lives of influence and privilege to serve. “And He was saying to them, ‘The harvest is plentiful, but the laborers are few; therefore beseech the Lord of the harvest to send out laborers into His harvest.”’ (Luke 10:2). Are you willing to put aside your positions of influence and privilege to serve?</p></li>
 </ul>
-<p>God’s Faithfulness in Delivering the Jews from Babylonian Captivity – the 2<sup>nd</sup> exodus</p>
+<p>God’s Faithfulness in Delivering the Jews from Babylonian Captivity</p>
 <p>605 BC</p>
-<h1 id="nebuchadnezzar-ii-babylonian"><strong><em>Nebuchadnezzar II</em> (Babylonian)</strong></h1>
+<h1 id="nebuchadnezzar-ii-babylonian"><em>Nebuchadnezzar II</em> (Babylonian)</h1>
 <p>562 BC</p>
 <p><em>Evil Merodach</em> (Babylonian)</p>
 <p>560 BC</p>
-<h1 id="nabonidus-babylonian"><strong><em>Nabonidus</em> (Babylonian)</strong></h1>
+<h1 id="nabonidus-babylonian-was-aramean"><em>Nabonidus</em> (Babylonian) (was Aramean)</h1>
+<p>Resided in northern Arabia</p>
 <p>559 BC</p>
-<h1 id="section"></h1>
-<h1 id="cyrus-ii-persian"><strong><em>Cyrus I</em>I (Persian)</strong></h1>
-<p>529 Belshazzar a minor king</p>
+<h1 id="belshazzar-viceroy-in-babylon">539 Belshazzar, viceroy in Babylon</h1>
+<p>539 Cyrus II conquers Babylon</p>
+<h1 id="cyrus-ii-persian"><em>Cyrus II</em> (Persian)</h1>
+<p>530</p>
 <p><em>Cambyses II</em> (Persian)</p>
 <p>Of Ezra 4.7,11,23</p>
 <p>522 BC</p>
-<h1 id="darius-i-the-great-mede"><strong><em>Darius I</em> the Great (Mede)</strong></h1>
-<p>(one of Artaxerxes’ generals)</p>
-<h2 id="bc"><strong>486 BC</strong></h2>
+<h1 id="darius-i-the-great-mede"><em>Darius I</em> the Great (Mede)</h1>
+<p>(one of Artaxerxes’ generals 488</p>
+<h2 id="bc">486 BC</h2>
+<h2 id="section"></h2>
+<h2 id="xerxes-i-persianaka-xerxes-the-great"><em>Xerxes I</em> (Persian)aka “Xerxes the Great”</h2>
 <h2 id="section-1"></h2>
-<h2 id="xerxes-i-persianaka-xerxes-the-great"><strong><em>Xerxes I</em> (Persian)aka “Xerxes the Great”</strong></h2>
 <h2 id="section-2"></h2>
+<h2 id="bc-1">464 BC</h2>
 <h2 id="section-3"></h2>
-<h2 id="bc-1"><strong>464 BC</strong></h2>
-<h2 id="section-4"></h2>
-<h2 id="artaxerxes-i-capital-is-susa"><strong><em>Artaxerxes I</em> Capital is Susa</strong></h2>
+<h2 id="artaxerxes-i-capital-is-susa"><em>Artaxerxes I</em> Capital is Susa</h2>
 <p>3<sup>rd</sup> son of Xerxes (Persian)</p>
 <p>425 BC</p>
