Update Leviticus and numbers studies

--- a/_studies/numbers-1.5-16.html
+++ b/_studies/numbers-1.5-16.html
@@ -1,4 +1,4 @@
-<h1 id="numbers-chapter-14-16-gods-12-lessons-on-effective-spiritual-warfare.">Numbers Chapter 1:4-16: “God’s 12 Lessons On Effective Spiritual Warfare.”</h1>
+<h1 id="numbers-15-16-lessons-for-the-census-of-the-12-tribes-for-effective-spiritual-warfare.">Numbers 1:5-16: Lessons For the Census of the 12 Tribes for Effective Spiritual Warfare.”</h1>
 <h2 id="whats-in-a-name">1. <u>What’s in a Name</u>?</h2>
 <ul>
 <li><blockquote>
