--- a/_studies/1-samuel-10.html
+++ b/_studies/1-samuel-10.html
@@ -8,7 +8,7 @@
 </ul>
 <blockquote>
 <p><img src="/1-samuel-10/media/image1.png" style="width:5.59722in;height:3.53125in" /></p>
-<p>Saul anoints David with the oil of the Holy Spirit<a href="#fn1" id="fnref1" class="footnote-ref"><sup>1</sup></a></p>
+<p>Samuel anoints Saul with the oil of the Holy Spirit<a href="#fn1" id="fnref1" class="footnote-ref"><sup>1</sup></a></p>
 </blockquote>
 <ul>
 <li><p><u>Be anointed with the Spirit</u>. Oil symbolizes the Holy Spirit (1 Sam. 16:13). Just as Samuel anointed the king with oil, Moses also poured oil on Aaron’s head to consecrate Him. “Then he poured some of the anointing oil on Aaron’s head and anointed him, to consecrate him.” (Lev. 8:12). “Then you shall take the anointing oil and pour it on his head and anoint him.” (Ex. 29:7). When Christ began His ministry, He was dunked into the Jordan river (Matt. 3:13-15). The oil being poured onto the heads of kings and priests symbolized the immersion of the Spirit, like a baptism. Believers must be anointed by the Spirit in all that they do: “But you have an anointing from the Holy One, and you all know.” (1 Jo. 2:20). “Now He who establishes us with you in Christ and anointed us is God,” (1 Cor. 1:21). “For all who are being led by the Spirit of God, these are sons of God.” (Ro. 8:14). Are your actions in life anointed or simply annoying?</p></li>
