Fix tmp file orphan and apply Nov study updates

--- a/_studies/numbers-12.html
+++ b/_studies/numbers-12.html
@@ -3,13 +3,13 @@
 <h2 id="dont-gossip-about-gods-appointed-leaders.-nu.-121.">1. <u>Don’t Gossip About God’s Appointed Leaders</u>. Nu. 12:1.</h2>
 <ul>
 <li><blockquote>
-<p><u>Miriam and Aaron’s racial prejudice</u>. Miriam and Aaron, the sister and brother of Moses, complained because Moses married a “Cushite” from Ethiopia. “<em>Then Miriam and Aaron spoke against Moses because of the Cushite woman whom he had married (for he had married a Cushite woman);</em>” (Nu. 12:1). In other words, they complained because she was black. The Bible does reveal what happened to his first wife Zipporah. Many imagine that God somehow condoned racism because people have misused the Bible to enslave others based upon their race. Not so. That is one of the many lies of the devil that he has used to defame God. From Moses’ example, we also know that interracial marriage amongst believers is allowed. When was the last time you heard someone cite this verse and God’s punishment that followed to show that He is against mankind’s racism? If people knew the Word, Satan would not have the opportunity to defame God. The Bible says that we are to be prepared to explain the hope that lies within us (1 Pet. 3:15). The Bible also warns against those who call evil good and good evil (Is. 5:20). Now, more than ever before, the Bible is under attack both by the world and sadly even within the Church. There are those who call some parts of God’s Word evil. Are you prepared to defend the Word from the devil’s lies?</p>
+<p><u>Miriam and Aaron’s racial prejudice</u>. Miriam and Aaron, the sister and brother of Moses, complained because Moses married a “Cushite” from Ethiopia. “<em>Then Miriam and Aaron spoke against Moses because of the Cushite woman whom he had married (for he had married a Cushite woman);</em>” (Nu. 12:1). In other words, they complained because she was black. The Bible does not reveal what happened to Moses’ first wife Zipporah. Many imagine that God somehow condoned racism because people have misused the Bible to enslave others based upon their race. Not so. That is one of the many lies of the devil that he has used to defame God. From Moses’ example, we also know that interracial marriage amongst believers is allowed. When was the last time you heard someone cite this verse and God’s punishment that followed to show that He is against mankind’s racism? If people knew the Word, Satan would not have the opportunity to defame God. The Bible says that we are to be prepared to explain the hope that lies within us (1 Pet. 3:15). The Bible also warns against those who call evil good and good evil (Is. 5:20). Now, more than ever before, the Bible is under attack both by the world and sadly even within the Church. There are those who call some parts of God’s Word evil. Are you prepared to defend the Word from the devil’s lies?</p>
 </blockquote></li>
 </ul>
 <blockquote>
-<p><img src="/numbers-12/media/image2.jpg" style="width:5.88542in;height:2.94806in" /></p>
+<p><img src="/numbers-12/media/image4.jpg" style="width:5.88542in;height:2.94806in" /></p>
 <p>Moses married a black Cushite women from Ethiopia<a href="#fn1" id="fnref1" class="footnote-ref" role="doc-noteref"><sup>1</sup></a></p>
-<p><img src="/numbers-12/media/image1.jpg" style="width:6.05729in;height:4.80208in" /></p>
+<p><img src="/numbers-12/media/image3.jpg" style="width:6.05729in;height:4.80208in" /></p>
 <p>Miriam and Aaron gossiped against Moses and displayed racial prejudice<a href="#fn2" id="fnref2" class="footnote-ref" role="doc-noteref"><sup>2</sup></a></p>
 </blockquote>
 <ul>
@@ -30,7 +30,7 @@
 </blockquote></li>
 </ul>
 <blockquote>
-<p><img src="/numbers-12/media/image4.jpg" style="width:5.96354in;height:4.875in" /></p>
+<p><img src="/numbers-12/media/image2.jpg" style="width:5.96354in;height:4.875in" /></p>
 <p>Miriam and Aaron questioned Moses’ authority<a href="#fn3" id="fnref3" class="footnote-ref" role="doc-noteref"><sup>3</sup></a></p>
 </blockquote>
 <ul>
@@ -69,7 +69,7 @@
 </blockquote></li>
 </ul>
 <blockquote>
-<p><img src="/numbers-12/media/image3.jpg" style="width:6.36458in;height:3.17763in" /></p>
+<p><img src="/numbers-12/media/image1.jpg" style="width:6.36458in;height:3.17763in" /></p>
 <p>God disciplined Miriam with leprosy<a href="#fn4" id="fnref4" class="footnote-ref" role="doc-noteref"><sup>4</sup></a></p>
 </blockquote>
 <ul>
