Add missing key prop

--- a/_studies/exodus-16.html
+++ b/_studies/exodus-16.html
@@ -8,7 +8,7 @@
 </blockquote></li>
 </ul>
 <blockquote>
-<p><img src="/exodus-16/media/image3.jpg" style="width:5.95833in;height:3.23204in" /></p>
+<p><img src="/exodus-16/media/image1.jpg" style="width:5.95833in;height:3.23204in" /></p>
 <p>The congregation complained against Moses and Aaron and longed for their old life<a href="#fn1" id="fnref1" class="footnote-ref" role="doc-noteref"><sup>1</sup></a></p>
 </blockquote>
 <ul>
@@ -32,7 +32,7 @@
 </blockquote></li>
 </ul>
 <blockquote>
-<p><img src="/exodus-16/media/image6.jpg" style="width:5.9375in;height:3.56415in" /></p>
+<p><img src="/exodus-16/media/image2.jpg" style="width:5.9375in;height:3.56415in" /></p>
 <p>God promised to provide the bread of life from heaven<a href="#fn2" id="fnref2" class="footnote-ref" role="doc-noteref"><sup>2</sup></a></p>
 </blockquote>
 <h2 id="grumbling-about-gods-spirit-led-leaders-is-also-a-sin-against-god.-ex.-166-7.">3. <u>Grumbling about God’s Spirit-Led Leaders is Also a Sin Against God</u>. Ex. 16:6-7.</h2>
@@ -42,7 +42,7 @@
 </blockquote></li>
 </ul>
 <blockquote>
-<p><img src="/exodus-16/media/image1.jpg" style="width:5.93056in;height:3.85417in" /></p>
+<p><img src="/exodus-16/media/image3.jpg" style="width:5.93056in;height:3.85417in" /></p>
 <p>Moses and Aaron reassured God’s people that God would provide<a href="#fn3" id="fnref3" class="footnote-ref" role="doc-noteref"><sup>3</sup></a></p>
 </blockquote>
 <ul>
@@ -65,7 +65,7 @@
 <p>(6) <u>Grumbling can also stem from a failure to submit to God</u>. Sometimes, the reasons for a trial may not seem clear. Yet, even when you don’t understand the reason for a trial (like the death of a loved one), you have no right to question God. After Job questioned God, God responded: ‘“Where were you when I laid the foundation of the earth? Tell Me, if you <sup>]</sup>have understanding’” (Job 38:4). Believers are the clay, and God is the Potter: “Woe to him who quarrels with his Maker, to him who is but a potsherd among the potsherds on the ground. Does the clay say to the potter, ‘What are you making?’ Does your work say, ‘He has no hands’?” (Is. 45:9). God’s thoughts and ways are also above mankind’s thoughts and ways: ‘“For My thoughts are not your thoughts, nor are your ways My ways,’ declares the LORD.” (Is. 55:8). If you think you can predict or explain God’s every move, you are bound to be disappointed. Even worse, you also will not be effective in helping someone cope with a tragedy. Will you trust God and find joy even when a tragedy cannot be explained?</p>
 <p>(7) <u>Grumbling can also stem from dissatisfaction with what Jesus offers.</u> The Jews later rejected God’s manna (Nu. 11:6). This foreshadowed their rejection of Jesus, the manna from heaven (John 6:35-51). They expected the Messiah to free them from the Romans. The religious leaders were also jealous and felt threatened by Jesus. Thus, both the masses and the elites were not satisfied with what Jesus offered. Sometimes, your grumbling stems from a desire for things of the flesh that God has prohibited. Are you satisfied with what Christ has provided you? Or, are you still longing for the things of the flesh?</p>
 </blockquote>
-<h2 id="hoarding-gods-provision-is-also-a-sin-against-god.-ex.-1613-21.">5. Hoarding <u>God’s Provision is Also a Sin Against God</u>. Ex. 16:13-21.</h2>
+<h2 id="hoarding-gods-provision-is-also-a-sin-against-god.-ex.-1613-21.">5. <u>Hoarding God’s Provision is Also a Sin Against God</u>. Ex. 16:13-21.</h2>
 <ul>
 <li><blockquote>
 <p><u>The Jews’ fourth rebellion in the wilderness</u>. In an act of grace, God caused manna to rain down from heaven. Yet, despite God’s manna miracles, some Jews refused to listen to God’s instruction not to hoard their manna: “<sup>13 </sup><em>So it came about at evening that the quails came up and covered the camp, and in the morning there was a layer of dew around the camp. <sup>14 </sup>When the layer of dew evaporated, behold, on the surface of the wilderness there was a fine flake-like thing, fine as the frost on the ground. <sup>15 </sup>When the sons of Israel saw it, they said to one another, “What is it?” For they did not know what it was. And Moses said to them, “It is the bread which the <span class="smallcaps">Lord</span> has given you to eat. <sup>16 </sup>This is what the <span class="smallcaps">Lord</span> has commanded, ‘Gather of it every man as much as he should eat; you shall take an omer apiece according to the number of persons each of you has in his tent.’” <sup>17 </sup>The sons of Israel did so, and some gathered much and some little. <sup>18 </sup>When they measured it with an omer, he who had gathered much had no excess, and he who had gathered little had no lack; every man gathered as much as he should eat. <sup>19 </sup>Moses said to them, “Let no man leave any of it until morning.” <sup>20 </sup>But they did not listen to Moses, and some left part of it until morning, and it bred worms and became foul; and Moses was angry with them. <sup>21 </sup>They gathered it morning by morning, every man as much as he should eat; but when the sun grew hot, it would melt</em>.” (Ex. 16:13-21). The Jews’ act of hoarding their manna stemmed from a failure to trust God. They did not trust Him to continually provide it.</p>
@@ -74,7 +74,7 @@
 <blockquote>
 <p><img src="/exodus-16/media/image7.jpg" style="width:5.99306in;height:7.38542in" /></p>
 <p><strong>Giovanni Battista Tiepolo</strong> (1696 – 1770) “The Gathering of Manna” (painting 1740-42)<a href="#fn5" id="fnref5" class="footnote-ref" role="doc-noteref"><sup>5</sup></a></p>
-<p><img src="/exodus-16/media/image4.jpg" style="width:6.5in;height:6.72222in" /></p>
+<p><img src="/exodus-16/media/image6.jpg" style="width:6.5in;height:6.72222in" /></p>
 <p><strong>Master of the Gathering of the Manna</strong> (1460–1470) “The Gathering of the Manna” (painting 1467)<a href="#fn6" id="fnref6" class="footnote-ref" role="doc-noteref"><sup>6</sup></a></p>
 </blockquote>
 <ul>
@@ -83,7 +83,7 @@
 </blockquote></li>
 </ul>
 <blockquote>
-<p><img src="/exodus-16/media/image2.jpg" style="width:5.95833in;height:6.34459in" /></p>
+<p><img src="/exodus-16/media/image4.jpg" style="width:5.95833in;height:6.34459in" /></p>
 <p>God provided for His people in the wilderness<a href="#fn7" id="fnref7" class="footnote-ref" role="doc-noteref"><sup>7</sup></a></p>
 </blockquote>
 <h2 id="working-for-gods-provision-seven-days-a-week-robs-your-body-of-rest.-ex.-1622-30.">6. <u>Working for God’s Provision Seven Days a Week Robs Your Body of Rest</u>. Ex. 16:22-30.</h2>
