Update to psalm 118

--- a/_studies/judges-6.html
+++ b/_studies/judges-6.html
@@ -25,7 +25,7 @@
 <p><img src="/judges-6/media/image7.jpg" style="width:5.90625in;height:2.1709in" /></p>
 <p>When God is with you, the enemy cannot defeat you (Rom. 8:31)<a href="#fn3" id="fnref3" class="footnote-ref" role="doc-noteref"><sup>3</sup></a></p>
 <p><img src="/judges-6/media/image5.jpg" style="width:5.94792in;height:3.12375in" /></p>
-<p>The angel of the <span class="smallcaps">Lord</span> encouraged Gideon that God had chosen him as a deliver<a href="#fn4" id="fnref4" class="footnote-ref" role="doc-noteref"><sup>4</sup></a></p>
+<p>The angel of the <span class="smallcaps">Lord</span> encouraged Gideon that God had chosen him as a deliverer<a href="#fn4" id="fnref4" class="footnote-ref" role="doc-noteref"><sup>4</sup></a></p>
 </blockquote>
 <ul>
 <li><p><u>Humble yourself in faith and He will also use you</u>. Like Moses, Gideon, and David, God will also use you when you humble yourself before Him: “He has brought down rulers from their thrones, and has exalted those who were humble.” (Lk. 1:52). “Humble yourselves in the presence of the Lord, and He will exalt you.” (Jam. 4:10). “So that He sets on high those who are lowly, and those who mourn are lifted to safety.” (Job 5:11). A nation will also be healed when it humbles itself before God: “and My people who are called by My name humble themselves and pray and seek My face and turn from their wicked ways, then I will hear from heaven, will forgive their sin and will heal their land.” (2 Chron. 7:14). Do you walk with humility and give God credit for your successes?</p></li>
@@ -67,6 +67,7 @@
 <p><img src="/judges-6/media/image6.jpg" style="width:5.95833in;height:3.52601in" /></p>
 <p>Gideon demanded that God give him a sign through his fleece<a href="#fn8" id="fnref8" class="footnote-ref" role="doc-noteref"><sup>8</sup></a></p>
 </blockquote>
+<section id="footnotes" class="footnotes footnotes-end-of-document" role="doc-endnotes">
 <hr />
 <ol>
 <li><div id="fn1">
@@ -94,3 +95,4 @@
 <p>Image credit: <a href="https://bibleencyclopedia.com/pictures/Judges_6_Gideon_and_the_fleece_2.htm"><u>Judges 6 Bible Pictures: Gideon and the fleece (bibleencyclopedia.com)</u></a><a href="#fnref8" class="footnote-back" role="doc-backlink">↩︎</a></p>
 </div></li>
 </ol>
+</section>
